--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,31 @@
 <html>
+    <head>
+        <title>
+            Article one | Hemanth Malepati
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article one
+        </h3>
+        <div>
+            sep 5,2016
+        </div>
+        <div>
+            <p>
+                This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.
+            </p>
+             <p>
+                This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.
+            </p>
+             <p>
+                This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.
+            </p>
+        </div>
+    </body>
+    
 </html>
