[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Article one | Hemanth Malepati
         </title>
+        <meta name="viewport" cotent="width=device-width, intial scale=1" />
     </head>
     <body>
         <div>
