--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,26 @@
-
+<html>
+    <head>
+        <title>
+            Article two | Hemanth Malepati
+        </title>
+        <meta name="viewport" cotent="width=device-width, intial scale=1" />
+    </head>
+    <body>
+        <div>
+            <a href="/">home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article two
+        </h3>
+        <div>
+            sep 10,2016
+        </div>
+        <div>
+            <p>
+                This is the content for my second article.
+            </p>
+        </div>
+    </body>
+    
+</html>
