[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,1 +1,28 @@
 
+<html>
+    <head>
+        <title>
+            Article three | Hemanth Malepati
+        </title>
+        <meta name="viewport" cotent="width=device-width, intial scale=1" />
+    </head>
+    <body>
+        <div>
+            <a href="/">home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article three
+        </h3>
+        <div>
+            sep 15,2016
+        </div>
+        <div>
+            <p>
+                This is the content for my third article.
+            </p>
+                
+        </div>
+    </body>
+    
+</html>
