[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,28 +4,36 @@
             Article one | Hemanth Malepati
         </title>
         <meta name="viewport" cotent="width=device-width, intial scale=1" />
+        <style>
+            .container {
+               max-width: 800px;
+               margin: 0 auto;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article one
-        </h3>
-        <div>
-            sep 5,2016
-        </div>
-        <div>
-            <p>
-                This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.
-            </p>
-             <p>
-                This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.
-            </p>
-             <p>
-                This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.
-            </p>
+        <div class="contanier">
+            <div>
+                <a href="/">home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article one
+            </h3>
+            <div>
+                sep 5,2016
+            </div>
+            <div>
+                <p>
+                    This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.
+                </p>
+                <p>
+                    This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.
+                </p>
+                <p>
+                    This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.This is the cotent for my first article.
+                </p>
+             </div>
         </div>
     </body>
     
