[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -15,7 +15,7 @@
         </style>
     </head>
     <body>
-        <div class="contanier">
+        <div class="containerr">
             <div>
                 <a href="/">home</a>
             </div>
