--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,22 +4,35 @@
             Article two | Hemanth Malepati
         </title>
         <meta name="viewport" cotent="width=device-width, intial scale=1" />
+        <style>
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article two
-        </h3>
-        <div>
-            sep 10,2016
-        </div>
-        <div>
-            <p>
-                This is the content for my second article.
-            </p>
+        <div class="container">
+            <div>
+                <a href="/">home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article two
+            </h3>
+            <div>
+                sep 10,2016
+            </div>
+            <div>
+                <p>
+                    This is the content for my second article.
+                </p>
+            </div>
         </div>
     </body>
     
