--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,17 +4,7 @@
             Article one | Hemanth Malepati
         </title>
         <meta name="viewport" cotent="width=device-width, intial scale=1" />
-        <style>
-            .container {
-                max-width: 800px;
-                margin: 0 auto;
-                color: grey;
-                font-family: sans-serif;
-                padding-top: 60px;
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
