[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div id="main-text" class="center text-big bold">
             Hi! I am hemanth and this is my first webapp.
-            <h4>A new headng</h4>
+            <h4>A new heading</h4>
             i've made some new local changes.
         </div>
         <script>
