--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div id="main-text" class="center text-big bold">
+        <div class="center text-big bold">
             Hi! I am hemanth and this is my first webapp.
             <h4>A new heading</h4>
             i've made some new local changes.
