--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+        <div class="container">
+            <div class="center">
+                <img id='madi' src="https://pbs.twimg.com/profile_images/785015074926714880/fS0WWPl7.jpg" class="img-medium"/>
+            </div>
+            <br>
+            <hr/>
+            <h3>Personal</h3>
+            <div>
+                Hi, My name is Hemanth Malepati
+            </div>
+           <hr/>
+            <h3>Professional</h3>
+            <div>
+                I am Studying at Sree Vidyanikethan Engneering College
+            </div>
+            <hr/>
+            <div class="footer">
+            </div>
+            
         </div>
-        <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am hemanth and this is my first webapp.
-            <h4>A new heading</h4>
-            i've made some new local changes.
-        </div>
-        <script>
-            alert("Hi,I\'m Javascript");
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
